--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
         <nav class="navbar top-navbar navbar-expand-md navbar-dark">
             <div class="navbar-header">
                 <a class="navbar-brand"><b>
-                        <img src="../assets/images/logo.png" alt="logo" class="light-logo" />
+                        <img src="./assets/images/logo.png" alt="logo" class="light-logo" />
                     </b>
                     <span class="hidden-xs"> FromHearty</span>
                 </a>
@@ -26,7 +26,7 @@
                 </ul>
                 <ul class="navbar-nav my-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-bs-toggle="dropdown"
+                        <!-- <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-bs-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false"> <i class="ti-email"></i>
                             <div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>
                         </a>
@@ -36,10 +36,10 @@
                                     <div class="drop-title">Notifications</div>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2"
+                        <!-- <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2"
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                                 class="icon-note"></i>
                             <div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>
@@ -50,12 +50,12 @@
                                     <div class="drop-title">Messages</div>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
                     <li class="nav-item dropdown u-pro">
-                        <a class="nav-link dropdown-toggle waves-effect waves-dark profile-pic" href=""
+                        <!-- <a class="nav-link dropdown-toggle waves-effect waves-dark profile-pic" href=""
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="" alt="user"
-                                class=""></a>
+                                class=""></a> -->
                         <div class="dropdown-menu dropdown-menu-end animated flipInY">
                             <a class="dropdown-item"><i class="ti-user"></i> My Profile</a>
                             <div class="dropdown-divider"></div>
