--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,7 +1,12 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <body class="skin-megna fixed-layout">
 <div *ngIf="isLoggedIn" id="main-wrapper">
     <header class="topbar">
         <nav class="navbar top-navbar navbar-expand-md navbar-dark">
+            <button class="navbar-toggler custom-hamburger-display" type="button" (click)="toggleSidebar()">
+                <span class="navbar-toggler-icon"></span>
+              </button>
             <div class="navbar-header">
                 <a class="navbar-brand"><b>
                         <img src="./assets/images/logo.png" alt="logo" class="light-logo" />
@@ -68,8 +73,11 @@
             </div>
         </nav>
     </header>
-    <aside class="left-sidebar">
+    <aside class="left-sidebar" [class.open]="isSidebarOpen">
         <div class="scroll-sidebar">
+            <div class="close-button custom-hamburger-display" (click)="toggleSidebar()">
+                <i class="material-icons">close</i>
+              </div>
             <nav class="sidebar-nav">
                 <ul id="sidebarnav">
                     <li class="nav-small-cap">--- PAGES</li>
