Patient overview & organized calendar

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -84,8 +84,8 @@
                     <li> <a class="waves-effect waves-dark" href="#" routerLink="home-page"><i
                                 class="fas fa-home"></i><span class="hide-menu">Home
                                 Page</span></a></li>
-                    <li> <a class="waves-effect waves-dark" href="#" routerLink="ai-prediction"><i
-                                class="fas fa-heartbeat"></i><span class="hide-menu">AI Prediction</span></a></li>
+                    <li> <a class="waves-effect waves-dark" href="#" routerLink="prediction-tab"><i
+                                class="fas fa-heartbeat"></i><span class="hide-menu">Patient Record</span></a></li>
                     <li class="nav-small-cap">--- SUPPORT</li>
                     <li><a class="waves-effect waves-dark" aria-expanded="false" (click)="logout()"><i
                                 class="fa fa-power-off"></i><span class="hide-menu">Log Out</span></a></li>
