--- a/Frontend/src/app/appointment/appointment.component.html
+++ b/Frontend/src/app/appointment/appointment.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title"><strong>Book an Appointment</strong></h4>
+                <h4 class="modal-title"><strong>Book an Appointment for patient {{patientService.selectedPatient?.firstName + ' ' + patientService.selectedPatient?.lastName}}</strong></h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
             <div class="modal-body">
