--- a/Frontend/src/app/home-doctor/prediction-tab/prediction-tab.component.html
+++ b/Frontend/src/app/home-doctor/prediction-tab/prediction-tab.component.html
@@ -20,3 +20,4 @@
 </ul>
 <app-patient-overview *ngIf="patientsTab"></app-patient-overview>
 <app-ai-prediction *ngIf="aiPredictionTab"></app-ai-prediction>
+<app-archive *ngIf="archivesTab"></app-archive>
